<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="ca.unb.mobiledev.managemyassets.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="512dp">

            <ImageView
                android:id="@+id/assetPicture_imageView"
                android:layout_width="0dp"
                android:layout_height="183dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/asset_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_default_asset_image" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/assetTakePicture_fab"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:backgroundTint="@color/colorPrimary"
                android:src="@android:drawable/ic_menu_camera"
                android:tint="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.956"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.395" />

            <EditText
                android:id="@+id/assetName_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorAccent"
                android:hint="@string/asset_name"
                android:inputType="text|textCapWords|textCapSentences"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetPicture_imageView" />

            <EditText
                android:id="@+id/assetDescription_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:hint="@string/asset_description"
                android:inputType="text|textCapSentences"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetName_editText" />

            <EditText
                android:id="@+id/assetNotes_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:gravity="bottom"
                android:hint="@string/asset_notes"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="4"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetDescription_editText" />

            <EditText
                android:id="@+id/assetLongitude_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:hint="@string/asset_longitude"
                android:inputType="text|numberSigned|numberDecimal"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetLatitude_editText" />

            <EditText
                android:id="@+id/assetLatitude_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:hint="@string/asset_latitude"
                android:inputType="text|numberSigned|numberDecimal"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textCursorDrawable="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetNotes_editText" />

            <Button
                android:id="@+id/assetCurrentLocation_button"
                android:layout_width="124dp"
                android:layout_height="57dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/asset_get_location"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assetNotes_editText" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/assetSave_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@android:drawable/ic_menu_save"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/black" />

</android.support.design.widget.CoordinatorLayout>